# magic-packet

./: .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build.yml
src/: cli.rs  lib.rs  magic.rs  main.rs
