[package]
name = "magic-packet"
version = "0.1.0"
authors = ["Armin Häberling <armin.aha@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/arminha/magic-packet"
description = "A command line tool for sending Wake-on-LAN Magic packets"

build = "build.rs"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
clap_complete = "4.0.3"
clap = "4.3.8"
regex = "1.7.3"

[dependencies]
clap = { version = "4.3.8", features = ["wrap_help"] }
regex = "1.7.3"
